<resources>
    <string name="app_name">savemoney</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="confirmar">Confirmar</string>
    <string name="apagar">Apagar</string>
    <string name="receita">Receita</string>
    <string name="despesas">Despesas</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="ok">OK</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="datanascimento">Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="telefone">Telefone</string>
    <string name="sobre">Sobre</string>
    <string name="alterarfoto">Alterar Foto</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome Completo</string>
    <string name="confirmarsenha">Confirmar Senha</string>
    <string name="preencher">Por favor, preencha os campos corretamente</string>
    <string name="erro">Error</string>
    <string name="sucesso">Sucesso!</string>
    <string name="financas">Saldo Atual de Finanças</string>


</resources>
