<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:orientation="vertical"
        android:background="@drawable/gradient"
        android:layout_width="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars[3]"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_marginTop="43dp"/>
    <TextView
            android:text="Carlos henrique de Azevedo Moura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#fdfcfc"
            android:textSize="16dp"
            android:layout_alignParentTop="true"
            android:id="@+id/textView"
            android:layout_marginTop="201dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="#fdfcfc"
            android:textSize="16dp"
            android:id="@+id/textView2"
            android:layout_marginTop="286dp"
            android:layout_toStartOf="@+id/textView"
            android:layout_marginEnd="-13dp"/>
    <TextView
            android:text="@string/datanascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="#fdfcfc"
            android:textSize="16dp"
            android:id="@+id/textView3"
            android:layout_marginTop="327dp"
            android:layout_toStartOf="@+id/textView"
            android:layout_marginEnd="-15dp"/>
    <TextView
            android:text="@string/telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fdfcfc"
            android:textSize="16dp"
            android:layout_alignParentTop="true"
            android:id="@+id/textView4"
            android:layout_marginTop="364dp"
            android:layout_toStartOf="@+id/textView"
            android:layout_marginEnd="-18dp"/>
    <TextView
            android:text="@string/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textColor="#fdfcfc"
            android:textSize="16dp"
            android:id="@+id/textView5"
            android:layout_marginTop="401dp"
            android:layout_toStartOf="@+id/textView"
            android:layout_marginEnd="-18dp"/>
    <Button
            android:text="@string/sobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnSobre"
            android:layout_marginBottom="18dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_alignParentLeft="true"/>

    <Button
            android:text="@string/alterarfoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnFoto"
            android:layout_marginBottom="18dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp"
            android:layout_alignParentLeft="true"/>

    <Button
            android:text="@string/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/btnSalvar"
            android:layout_marginBottom="18dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="278dp"
            android:layout_marginStart="278dp"
            android:layout_alignParentLeft="true"/>
</RelativeLayout>